config for local-devnet in example.env

--- a/example.env
+++ b/example.env
@@ -3,6 +3,6 @@ NODE_ENV=development
 
 # Node.js server configuration
 SERVER_PORT=8080
-
-LOTUS=xxx
-JWT=xxx
+# Config for local-devnet https://github.com/Shard-Labs/lotus-devnet
+LOTUS=http://172.16.238.10:1234/rpc/v0
+JWT=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJBbGxvdyI6WyJyZWFkIiwid3JpdGUiLCJzaWduIiwiYWRtaW4iXX0.P9-N3mhqgn0CaQCzBgQri6wNXIDXAS5SCLwy4oJCEuo
